Copy as a new driver operator can't have a shortcut #105371

Closed
opened 2023-03-02 11:40:01 +01:00 by hamza.SMA · 4 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: rB55485cb379f7
Worked: (newest version of Blender that worked as expected)

Short description of error
for Copy as a new driver operator, can't assign shortcut

image

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `rB55485cb379f7` Worked: (newest version of Blender that worked as expected) **Short description of error** for Copy as a new driver operator, can't assign shortcut ![image](/attachments/5510ace5-def9-4df0-ad02-e9fb5136cc0f)
hamza.SMA added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-03-02 11:40:02 +01:00

Isn't there a reason why this feature is missing?

Isn't there a reason why this feature is missing?

Isn't there a reason why this feature is missing?

It works when I have created it manually. After that it also can be changed.

For assign shortcut button, there is comment /* only show 'assign' if there's a suitable key map for it to go in */. Checked WM_keymap_guess_opname() and there isn't.

Will make patch for this, but this is not a bug since it was never implemented.

> Isn't there a reason why this feature is missing? It works when I have created it manually. After that it also can be changed. For assign shortcut button, there is comment `/* only show 'assign' if there's a suitable key map for it to go in */`. Checked `WM_keymap_guess_opname()` and there isn't. Will make patch for this, but this is not a bug since it was never implemented.
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2023-03-02 19:30:47 +01:00

Just a note: I have noticed another comment in WM_keymap_guess_opname():

  /* Op types purposely skipped for now:
   *     BRUSH_OT
   *     BOID_OT
   *     BUTTONS_OT
   *     CONSTRAINT_OT
   *     PAINT_OT
   *     ED_OT
   *     FLUID_OT
   *     TEXTURE_OT
   *     UI_OT
   *     WORLD_OT
   */

But this has been done 5 years ago and PAINT_OT violates this already. So I will disregard this and make patch anyway. worst case won't go in.

Just a note: I have noticed another comment in `WM_keymap_guess_opname()`: ``` /* Op types purposely skipped for now: * BRUSH_OT * BOID_OT * BUTTONS_OT * CONSTRAINT_OT * PAINT_OT * ED_OT * FLUID_OT * TEXTURE_OT * UI_OT * WORLD_OT */ ``` But this has been done 5 years ago and `PAINT_OT` violates this already. So I will disregard this and make patch anyway. worst case won't go in.

This issue should be fixed by 35a8341d7b

This issue should be fixed by 35a8341d7b
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105371
No description provided.